# cosmic-ext-flux

./: Cargo.toml  README.md  RELEASE_NOTES.md  justfile
.github/workflows/: ci.yml  release.yml
applet/: Cargo.toml
applet/i18n/en/: cosmic-ext-applet-flux.ftl
applet/i18n/fr/: cosmic-applet-flux.ftl  cosmic-ext-applet-flux.ftl
applet/resources/: app.desktop
applet/src/: app.rs  config.rs  dbus_client.rs  i18n.rs  main.rs
daemon/: Cargo.toml
daemon/src/: battery.rs  dbus.rs  decoder.rs  main.rs  wayland.rs
data/: cosmic-ext-flux-daemon.service
debian/: changelog  control  copyright  postinst  rules
docs/: index.html
