[package]
name = "cosmic-ext-flux-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wayland layer-shell daemon that renders GIF/video to the desktop background"

[[bin]]
name = "cosmic-ext-flux-daemon"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = { version = "0.20", default-features = false, features = [
    "calloop",
    "calloop-wayland-source",
] }
wayland-client = "0.31"

# Toplevel-info protocol client for detecting fullscreen apps (issue #13).
# Pinned to the same rev libcosmic resolves, so the whole tree shares one
# wayland-client/sctk and there is no version clash with the deps above.
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", rev = "d0e95be" }

gstreamer = "0.23"
gstreamer-app = "0.23"

tokio = { version = "1", features = ["rt", "macros", "sync"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", default-features = false }

libc = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
